# WAB-project

./: .pdm-python  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: database.py  main.py
src/routers/: auth_router.py  match_router.py  players_router.py  team_router.py  user_router.py
src/schema/: match.py  player.py  team.py  token.py  user.py
src/services/: rabbitMQ.py
src/utils/: autentication.py  config.py  token_validation.py
