[project]
name = "football-match-api"
version = "0.1.0"
description = "Football match API"
authors = [
    {name = "Kleveta", email = "kleveta.lukas99@gmail.com"},
]
dependencies = [
    "uvicorn>=0.24.0.post1",
    "fastapi>=0.104.1",
    "pymongo>=4.6.1",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.scripts]
dev = "uvicorn src.main:app --reload"
